--- a/client/src/components/MeetingRooms/MeetingRooms.css
+++ b/client/src/components/MeetingRooms/MeetingRooms.css
@@ -13,3 +13,9 @@ body {
 	text-align: center;
 	margin-bottom: 50px;
 }
+
+.meetingRooms__main {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
