--- a/client/src/components/Rooms/MeetingRooms/OpenRooms/RoomInfo/RoomInfo.css
+++ b/client/src/components/Rooms/MeetingRooms/OpenRooms/RoomInfo/RoomInfo.css
@@ -43,6 +43,23 @@
 	margin: auto;
 }
 
+.roomInfoJoin__buttonClosed {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	background-color: #c83200;
+	height: 32px;
+	padding: 4px;
+	border-radius: 15px;
+	cursor: pointer;
+	transition: 1ms ease-in;
+	width: 20%;
+	margin: auto;
+	opacity: 0.3;
+	cursor: default;
+}
+
 .matches__img {
 	width: 40px;
 	height: 40px;
