--- a/client/src/components/Sidebar/Sidebar.css
+++ b/client/src/components/Sidebar/Sidebar.css
@@ -10,7 +10,7 @@ li{
     position: fixed;
     height: 100%;
     width: 300px;
-    background-color:darkblue;
+    background-color:rgb(65, 48, 212);
     box-sizing: border-box;
     padding: 30px 20px;
     transition: width .2s ease-in;
@@ -18,6 +18,8 @@ li{
 
 .side-menu.inactive{
     width: 80px;
+    
+
 }
 
 .side-menu .top-section{
@@ -87,7 +89,7 @@ li{
     font-size: 20px;
     line-height: 40px;
     text-align: center;
-    color: #f2f
+    color: #fff
 }
 
 .side-menu .main-menu{
@@ -97,7 +99,7 @@ li{
 .footer{
     width: 100%;
     height: 100px;
-    background: deepskyblue;
+    background: rgb(65, 48, 212);
     position: absolute;
     bottom: 0;
     left: 0;
