--- a/client/src/RegistrationPage.css
+++ b/client/src/RegistrationPage.css
@@ -4,6 +4,8 @@
 .signup-container { 
     display: flex; 
     justify-content: center; 
+    align-items: center;
+    margin-top: 50px; 
 }
 
 .signup-box { 
@@ -171,3 +173,32 @@ input[type=text] {
     border-radius: 10px;
 }
 
+input:focus { 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    outline: none; 
+}
+
+p { 
+    width: 540px;
+    height: 51px;
+    left: 701px;
+    top: 1001px;
+    
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 45px;
+    text-align: center;
+    
+    color: #FFFFFF;
+}
+
+a:link { 
+    text-decoration: none;
+}
+
+button:hover { 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
+    border-radius: 25px;
+}
