--- a/client/src/LoginPage.css
+++ b/client/src/LoginPage.css
@@ -32,13 +32,22 @@
     height: 83px;
     left: 710px;
     top: 332px;
-    
+
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 38px; 
+    margin-right: 30px; 
+
     background: #FFFFFF;
     border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 10px;
     margin-bottom: 48px;
 }
+
 
 .form-group h1 { 
     font-family: Poppins;
@@ -88,6 +97,8 @@
     margin-top: 40px; 
 }
 
+
+
 ::placeholder { 
     width: 355px;
     height: 46px;
@@ -101,7 +112,26 @@
     line-height: 42px;
     text-align: left;
     padding-left: 20px; 
-    padding-bottom: 50px;
+   
     
     color: #606060;
+}
+
+input { 
+    font-family: Poppins;
+    color: #000000;
+    box-sizing: border-box;
+    padding-left: 10px;
+   
+}
+
+input:focus { 
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    outline: none; 
+}
+
+button:hover { 
+    width: 357px;
+    height: 68px;
+    top: 670px;
 }
