--- a/client/src/RegistrationPage.css
+++ b/client/src/RegistrationPage.css
@@ -199,6 +199,7 @@ a:link {
 }
 
 button:hover { 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
-    border-radius: 25px;
+    width: 388px;
+    height: 53px;
+    top: 915px; 
 }
