--- a/client/src/components/Room/UserInfo/UserInfo.css
+++ b/client/src/components/Room/UserInfo/UserInfo.css
@@ -13,6 +13,14 @@
 	flex-direction: column;
 	margin-top: 40px;
 	margin-bottom: 20px;
+	justify-content: space-between;
+}
+
+.user-info-section-top {
+	height: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
 
 .user-info-top {
@@ -37,4 +45,40 @@
 	cursor: pointer;
 	opacity: 0.7;
 	transform: translateY(-2px);
+}
+
+.connected-user {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	color: white;
+}
+
+.user-profile-img {
+	border-radius: 50%;
+	width: 80px;
+	border: 1px solid black;
+}
+
+.connected-user-profile {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 20px;
+}
+
+.connected-user-like {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.like-status:hover {
+	cursor: pointer;
+}
+
+.like-status {
+	width: 30px;
+	height: 30px;
 }
