--- a/client/src/pages/Features/Reports/report.css
+++ b/client/src/pages/Features/Reports/report.css
@@ -8,3 +8,22 @@
     position: static;
     
   }
+
+.report-button{
+    cursor: pointer;
+    color: #fff;
+    padding: 4px 20px;
+    border-radius: 25px;
+    background-color: #43428C;
+    width: 100px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    display: inline-block;
+}
+
+.report-title{
+    color: #fff;
+    font-size: 25px;
+    text-align: left;
+}
