--- a/client/src/pages/Rooms/style.css
+++ b/client/src/pages/Rooms/style.css
@@ -1,93 +1,112 @@
- html, body{
-    width: 100%;
-    height: 100%;
-  }
-  
-  .wrapper{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .container {
-    height: 80%;
-    width: 80%;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+html,
+.Roombody {
+	width: 100%;
+	height: 100%;
+}
 
-   .drag-item {
-    height: 50px !important;
-    width: 50px !important;
-    border-radius: 50%;
-  
-    background-color: #29e;
-    color: white;
-  
-    padding: 4%;
-  
-    -webkit-transform: translate(0px, 0px);
-    transform: translate(0px, 0px);
-  }
-  
-  #outer-dropzone {
-    height: 140px;
-  }
-  
-  #inner-dropzone {
-    height: 80px;
-  }
-  
-  .dropzone {
-    background-color: rgb(241, 191, 191);
-    border: dashed 4px transparent;
-    border-radius: 4px;
-    margin: 10px auto 30px;
-    padding: 10px;
-    width: 250px !important;
-    height: 250px !important;
-    transition: background-color 0.3s;
-    border-radius: 50%;
-  }
-  
-  .drop-active {
-    border-color: #aaa;
-  }
-  
-  .drop-target {
-    background-color: #29e;
-    border-color: #fff;
-    border-style: solid;
-  }
-  
-  .drag-drop {
-    display: inline-block;
-    min-width: 40px;
-    padding: 2em 0.5em;
-  
-    color: #fff;
-    background-color: #29e;
-    border: solid 2px #fff;
-  
-    -webkit-transform: translate(0px, 0px);
-    transform: translate(0px, 0px);
-  
-    transition: background-color 0.3s;
-  }
-  
-  .drag-drop.can-drop {
-    color: #000;
-    background-color: #4e4;
-  }
+.wrapper {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
-  .dragItems {
-    display: flex !important;
-  }
+.container {
+	height: 80%;
+	width: 80%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
-  .DropzoneContainer {
-    display: flex !important;
-  }
+.Room {
+	background-color: navy !important;
+	width: 100%;
+}
+
+.subRoom {
+	border-radius: 100px 0px 0px 0px;
+	margin-right: 15px;
+	margin-left: 5%;
+	background-color: lightgray;
+	height: 80vh; /* Magic here */
+	display: flex;
+	justify-content: center;
+}
+
+.drag-item {
+	height: 50px !important;
+	width: 50px !important;
+	border-radius: 50%;
+
+	background-color: #29e;
+	color: white;
+
+	padding: 4%;
+
+	-webkit-transform: translate(0px, 0px);
+	transform: translate(0px, 0px);
+}
+
+#outer-dropzone {
+	height: 140px;
+}
+
+#inner-dropzone {
+	height: 80px;
+}
+
+.dropzone {
+	background-color: rgb(241, 191, 191);
+	border: dashed 4px transparent;
+	border-radius: 4px;
+	margin: 10px auto 30px;
+	padding: 10px;
+	width: 250px !important;
+	height: 250px !important;
+	transition: background-color 0.3s;
+	border-radius: 50%;
+}
+
+.drop-active {
+	border-color: #aaa;
+}
+
+.drop-target {
+	background-color: #29e;
+	border-color: #fff;
+	border-style: solid;
+}
+
+.drag-drop {
+	display: inline-block;
+	min-width: 40px;
+	padding: 2em 0.5em;
+
+	color: #fff;
+	background-color: #29e;
+	border: solid 2px #fff;
+
+	-webkit-transform: translate(0px, 0px);
+	transform: translate(0px, 0px);
+
+	transition: background-color 0.3s;
+}
+
+.drag-drop.can-drop {
+	color: #000;
+	background-color: #4e4;
+}
+
+.dragItems {
+	display: flex !important;
+}
+.drag-item {
+	width: 100px;
+	height: 100px;
+}
+
+.DropzoneContainer {
+	display: flex !important;
+}
