--- a/client/src/pages/Rooms/style.css
+++ b/client/src/pages/Rooms/style.css
@@ -22,28 +22,23 @@ html,
 
 .Room {
 	background-color: navy !important;
-	width: 100%;
 }
 
 .subRoom {
-	border-radius: 100px 0px 0px 0px;
-	margin-right: 15px;
-	margin-left: 5%;
-	background-color: lightgray;
-	height: 80vh; /* Magic here */
+	border-radius: 100px 95px 0px 0px;
+	background-color: lightgoldenrodyellow;
+	height: 100vh; /* Magic here */
 	display: flex;
-	justify-content: center;
+	width: 100%;
+	margin-left: 5%;
+	margin-right: 20% !important;
 }
 
 .drag-item {
 	height: 500px !important;
 	width: 90px !important;
 	border-radius: 50%;
-
-	/* background-color: #29e; */
-
 	padding: 4%;
-
 	-webkit-transform: translate(0px, 0px);
 	transform: translate(0px, 0px);
 }
@@ -62,8 +57,8 @@ html,
 	border-radius: 4px;
 	margin: 10px auto 30px;
 	padding: 10px;
-	width: 250px !important;
-	height: 250px !important;
+	width: 200px !important;
+	height: 200px !important;
 	transition: background-color 0.3s;
 	border-radius: 50%;
 }
@@ -100,19 +95,24 @@ html,
 
 .dragItems {
 	display: flex !important;
+	margin-left: 15%;
+	height: max-content;
 }
 .drag-item {
-	width: 100px !important;
-	height: 45px !important;
+    width: 75px !important;
+    height: 30px !important;
 }
 
 .DropzoneContainer {
-	display: flex !important;
+    display: flex !important;
+    position: fixed;
+    max-width: inherit;
+    max-height: inherit;
 }
 
 .test {
 	padding-top: 10%;
-	padding-left: 25% !important;
+	margin-left: 1%;
 }
 
 .test2 {
@@ -132,45 +132,46 @@ html,
 .item1 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/man.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 
 .item2 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/man1.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 
 .item3 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/woman2.jpg') !important;
-	background-size: 100px 100px;
+	background-size: 80px 80px;
 }
 
 .item4 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/woman1.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 .item5 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/woman3.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 .item6 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/woman4.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 .item7 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/man3.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
+
 }
 .item8 {
 	background-repeat: no-repeat;
 	background-image: url('./Assets/man4.jpg') !important;
-	background-size: 110px 110px;
+	background-size: 80px 80px;
 }
 
 .footer {
